tl3730evm: add the tmp102 config

--- a/arch/arm/configs/omap3_evm_defconfig
+++ b/arch/arm/configs/omap3_evm_defconfig
@@ -234,6 +234,9 @@ CONFIG_BLK_DEV_RAM_SIZE=32768
 #
 CONFIG_EEPROM_LEGACY=y
 
+#tmp102 support
+CONFIG_SENSORS_TMP102=y
+
 #
 # SCSI device support
 #
