--- a/drivers/video/backlight/Kconfig
+++ b/drivers/video/backlight/Kconfig
@@ -307,6 +307,13 @@ config BACKLIGHT_PCF50633
 	  If you have a backlight driven by a NXP PCF50633 MFD, say Y here to
 	  enable its driver.
 
+config BACKLIGHT_TWL4030_PWM0
+	tristate "TWL4030 PWM0 Backlight Driver"
+	depends on BACKLIGHT_CLASS_DEVICE && TWL4030_CORE
+	help
+	  If you have a NEW Version Stalker Board using TWL4030 PWM0
+	  controlled backlight, say Y to enable this driver.
+
 endif # BACKLIGHT_CLASS_DEVICE
 
 endif # BACKLIGHT_LCD_SUPPORT
