tl3730evm: add the fram FM24CL04B-GTR support

--- a/arch/arm/configs/omap3_evm_defconfig
+++ b/arch/arm/configs/omap3_evm_defconfig
@@ -229,9 +229,12 @@ CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=32768
 
+CONFIG_MISC_DEVICES=y
+
 #
 # EEPROM support
 #
+CONFIG_EEPROM_AT24=y
 CONFIG_EEPROM_LEGACY=y
 
 #tmp102 support
