--- a/arch/arm/configs/omap3_evm_defconfig
+++ b/arch/arm/configs/omap3_evm_defconfig
@@ -81,6 +81,8 @@ CONFIG_OMAP_PACKAGE_CBB=y
 # CONFIG_MACH_OMAP3_TORPEDO is not set
 # CONFIG_MACH_OVERO is not set
 CONFIG_MACH_OMAP3EVM=y
+CONFIG_TL3730_USER_KEYS=m
+CONFIG_TL3730_USER_LEDS=m
 # CONFIG_MACH_OMAP3517EVM is not set
 # CONFIG_MACH_CRANEBOARD is not set
 # CONFIG_MACH_OMAP3_PANDORA is not set
